apps/nextcloud/overlays/tombstone/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ownca
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-ip-allowlist-internal@kubernetescrd
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
  name: nextcloud
spec:
  ingressClassName: traefik
  rules:
    - host: cloud.home.arpa
      http:
        paths:
          - backend:
              service:
                name: nextcloud
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cloud.home.arpa
      secretName: cloud-home-arpa-tls
